# StockPredict

./: .project-settings.yml  FPProject.cabal  StockPredict.cabal
data/: YAH.csv  salaries.csv
src/: Data.hs  Main.hs  Types.hs
